--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -11,14 +11,14 @@
     @apply prose-zinc dark:prose-invert;
     @apply prose-img:rounded-xl;
     @apply prose-a:decoration-wavy prose-a:decoration-yellow-800/70 prose-a:text-zinc-900 prose-a:dark:decoration-yellow-200/50 prose-a:dark:text-zinc-100 hover:dark:prose-a:text-yellow-200;
-    @apply prose-h1:font-display prose-h1:font-thin prose-h1:mb-24;
+    @apply prose-h1:font-sans prose-h1:font-bold prose-h1:mb-24;
   }
   .judine-prose-story {
     @apply prose mx-auto lg:prose-lg;
     @apply prose-zinc dark:prose-invert;
     @apply prose-img:rounded-xl;
     @apply prose-a:decoration-wavy prose-a:decoration-yellow-800/70 prose-a:text-zinc-900 prose-a:dark:decoration-yellow-200/50 prose-a:dark:text-zinc-100 hover:dark:prose-a:text-yellow-200;
-    @apply prose-h1:font-display prose-h1:font-thin prose-h1:mb-24;
+    @apply prose-h1:font-sans prose-h1:font-bold prose-h1:mb-24;
   }
 }
 
